; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic7xxx.c_ahc_construct_wdtr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic7xxx.c_ahc_construct_wdtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahc_softc = type { i32*, i32, i32 }
%struct.ahc_devinfo = type { i32, i32, i32 }

@MSG_EXTENDED = common dso_local global i32 0, align 4
@MSG_EXT_WDTR_LEN = common dso_local global i32 0, align 4
@MSG_EXT_WDTR = common dso_local global i32 0, align 4
@bootverbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"(%s:%c:%d:%d): Sending WDTR %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahc_softc*, %struct.ahc_devinfo*, i32)* @ahc_construct_wdtr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ahc_construct_wdtr(%struct.ahc_softc* %0, %struct.ahc_devinfo* %1, i32 %2) #0 {
  %4 = alloca %struct.ahc_softc*, align 8
  %5 = alloca %struct.ahc_devinfo*, align 8
  %6 = alloca i32, align 4
  store %struct.ahc_softc* %0, %struct.ahc_softc** %4, align 8
  store %struct.ahc_devinfo* %1, %struct.ahc_devinfo** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @MSG_EXTENDED, align 4
  %8 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %9 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %12 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 4
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i32, i32* %10, i64 %15
  store i32 %7, i32* %16, align 4
  %17 = load i32, i32* @MSG_EXT_WDTR_LEN, align 4
  %18 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %19 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %22 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %22, align 4
  %25 = sext i32 %23 to i64
  %26 = getelementptr inbounds i32, i32* %20, i64 %25
  store i32 %17, i32* %26, align 4
  %27 = load i32, i32* @MSG_EXT_WDTR, align 4
  %28 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %29 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %32 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %32, align 4
  %35 = sext i32 %33 to i64
  %36 = getelementptr inbounds i32, i32* %30, i64 %35
  store i32 %27, i32* %36, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %39 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %42 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %42, align 4
  %45 = sext i32 %43 to i64
  %46 = getelementptr inbounds i32, i32* %40, i64 %45
  store i32 %37, i32* %46, align 4
  %47 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %48 = getelementptr inbounds %struct.ahc_softc, %struct.ahc_softc* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 8
  %50 = add nsw i32 %49, 4
  store i32 %50, i32* %48, align 8
  %51 = load i64, i64* @bootverbose, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %67

53:                                               ; preds = %3
  %54 = load %struct.ahc_softc*, %struct.ahc_softc** %4, align 8
  %55 = call i8* @ahc_name(%struct.ahc_softc* %54)
  %56 = load %struct.ahc_devinfo*, %struct.ahc_devinfo** %5, align 8
  %57 = getelementptr inbounds %struct.ahc_devinfo, %struct.ahc_devinfo* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.ahc_devinfo*, %struct.ahc_devinfo** %5, align 8
  %60 = getelementptr inbounds %struct.ahc_devinfo, %struct.ahc_devinfo* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = load %struct.ahc_devinfo*, %struct.ahc_devinfo** %5, align 8
  %63 = getelementptr inbounds %struct.ahc_devinfo, %struct.ahc_devinfo* %62, i32 0, i32 2
  %64 = load i32, i32* %63, align 4
  %65 = load i32, i32* %6, align 4
  %66 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %55, i32 %58, i32 %61, i32 %64, i32 %65)
  br label %67

67:                                               ; preds = %53, %3
  ret void
}

declare dso_local i32 @printf(i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i8* @ahc_name(%struct.ahc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
